Refactor service and repository layer to align with new requirements